[package]
name = "lox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { version = "5.5.0", features = ["fancy"] }
reedline = "0.17.0"
thiserror = "1.0.38"


[dev-dependencies]
pretty_assertions = "1.3.0"
